force-app/main/default/objects/Yearly_Scheme_Instructions__c/Yearly_Scheme_Instructions__c.object-meta.xml
<CustomObject>
    <label>Yearly Scheme Instructions</label>
    <nameField>
        <displayFormat>YSI-{00000}</displayFormat>
        <label>YS Instructions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yearly Scheme Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>