force-app/main/default/objects/Yearly_Scheme_Instructions__c/fields/Know_More__c.field-meta.xml
<CustomField>
    <fullName>Know_More__c</fullName>
    <label>Know More</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>