force-app/main/default/objects/Yearly_Scheme_Instructions__c/fields/Pages_Name__c.field-meta.xml
<CustomField>
    <fullName>Pages_Name__c</fullName>
    <label>Pages Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Project Summary</fullName>
            </value>
            <value>
                <fullName>Research Environment</fullName>
            </value>
            <value>
                <fullName>Applicant CV</fullName>
            </value>
            <value>
                <fullName>Other Grants and Applications</fullName>
            </value>
            <value>
                <fullName>Additional Section for Letters and Declaration</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Research Proposal</fullName>
            </value>
            <value>
                <fullName>Research Involving Human Participants</fullName>
            </value>
            <value>
                <fullName>Research Involving Experiment on Animals</fullName>
            </value>
            <value>
                <fullName>Host Institution Details</fullName>
            </value>
            <value>
                <fullName>Fellowship Supervisor Details</fullName>
            </value>
            <value>
                <fullName>Work Outside Host Institution (WOHI)</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
            </value>
            <value>
                <fullName>Dissemination Plans</fullName>
            </value>
            <value>
                <fullName>Additional Role</fullName>
            </value>
            <value>
                <fullName>Mentor Details</fullName>
            </value>
            <value>
                <fullName>Sponsor Details</fullName>
            </value>
            <value>
                <fullName>Data Management and Data Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>