force-app/main/default/objects/Yearly_Scheme_Instructions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Know More</fullName>
            </value>
            <value>
                <fullName>Instruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>