force-app/main/default/objects/Yearly_Scheme_Instructions__c/fields/Yearly_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Scheme</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Yearly Scheme Instructions</relationshipLabel>
    <relationshipName>Yearly_Scheme_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>