force-app/main/default/objects/Yearly_Scheme_Instructions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Pages_Name__c</columns>
    <columns>Instructions__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>